k8s/java-spring-hello/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-spring-hello
spec:
  selector:
    matchLabels:
      app: java-spring-hello
  template:
    metadata:
      annotations:
        prometheus.io/path: /actuator/prometheus
        prometheus.io/port: "8080"
        prometheus.io/scrape: "true" 
      labels:
        app: java-spring-hello
    spec:
      containers:
        - name: app
          image: gromr1/java-spring-hello:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 2
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              cpu: 250m
              memory: 512Mi
