k8s/java-spring-hello/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-spring-hello
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: http
  selector:
    app: java-spring-hello
  sessionAffinity: None
  type: ClusterIP
