k8s/java-spring-hello/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-spring-hello
  labels:
    app: java-spring-hello
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: java-spring-hello.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: java-spring-hello
            port:
              number: 8080
